<resources>
    <string name="app_name">ABIconTest</string>
    <string name="action_edit_selected_title">Edit</string>
    <string name="action_copy_selected_title">Copy</string>
    <string name="action_cut_selected_title">Cut</string>
    <string name="action_cut_selected2_title">Cut</string>
    <string name="action_cut_selected3_title">Cut</string>
    <string name="action_cut_selected4_title">Cut</string>
    <string name="action_cut_selected5_title">Cut</string>
    <string name="action_paste_title">Paste</string>
    <string name="action_link_selected_title">Link</string>
    <string name="action_redo_title">Redo</string>
    <string name="action_undo_title">Undo</string>
    <string name="pref_default_filter">Filter</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--TouchDialog-->
    <string name="touch_dialog_title">Element touched</string>
    <string-array name="pref_touch_dialog_entries">
        <item>Action 1</item>
        <item>Action 2</item>
    </string-array>
    <string-array name="pref_touch_dialog_values">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
